--- a/app/settings.html
+++ b/app/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sound Machine Settings</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/settings.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
