Re-writing according to electron syntax changes

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,54 @@
                 <img src="img/logo.png"/>
             </h1>
         </div>
+        <div class="separator">
+        </div>
     </div>
+    <div class="row buttons">
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="ba-dum-tsss">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="money">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="applause">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="crowd-laughing">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+    </div>
+    <div class="row buttons">
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="sad-trombone">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="fart">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="ba-dum-tsss">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div class="button-sound" data-sound="money">
+                <span class="button-icon"></span>
+            </div>
+        </div>
+    </div>
+<!--
     <div class="row buttons">
         <div class="col-xs-3">
             <div class="button-sound" data-sound="ba-dum-tsss">
@@ -64,50 +111,7 @@
             </div>
         </div>
     </div>
-    <div class="row buttons">
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="ba-dum-tsss">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="money">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="ba-dum-tsss">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="money">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-    </div>
-    <div class="row buttons">
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="ba-dum-tsss">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="money">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="ba-dum-tsss">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-        <div class="col-xs-3">
-            <div class="button-sound" data-sound="money">
-                <span class="button-icon"></span>
-            </div>
-        </div>
-    </div>
+-->
 </div>
 
 <script src="js/index.js"></script>
