--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link href="css/index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<div class="about">About</div>
 <div class="settings">Settings</div>
 <div class="close">Close</div>
 <div id="main" class="container-fluid">
@@ -18,8 +19,6 @@
             <h1>
                 <img src="img/logo.png"/>
             </h1>
-        </div>
-        <div class="separator">
         </div>
     </div>
     <div class="row buttons">
