--- a/app/index.html
+++ b/app/index.html
@@ -55,12 +55,12 @@
             </div>
         </div>
         <div class="col-xs-3">
-            <div class="button-sound" data-sound="ba-dum-tsss">
+            <div class="button-sound" data-sound="gun">
                 <span class="button-icon"></span>
             </div>
         </div>
         <div class="col-xs-3">
-            <div class="button-sound" data-sound="money">
+            <div class="button-sound" data-sound="wow">
                 <span class="button-icon"></span>
             </div>
         </div>
