--- a/app/about.html
+++ b/app/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sound Machine Settings</title>
+    <title>Sound Machine Help</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <link href="css/settings.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -11,11 +11,13 @@
 <div id="settings-screen" class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
-            <h2>About/Help</h2>
+            <h2>About</h2>
 
-            <p>Press 1,2,...,8 on the keyboard to play sounds.</p>
+            <p>Press 1,2,3,4,5,6,7,8 on the keyboard to play sounds.</p>
 
             <p>Modifier keys for shortcuts can be changed in the settings.</p>
+
+            <p>© 2017 OOO "Vector"</p>
 
         </div>
     </div>
