minor design fixes

--- a/app/settings.html
+++ b/app/settings.html
@@ -13,7 +13,7 @@
         <div class="col-xs-12">
             <h2>Settings</h2>
 
-            <p>Modifier keys for global shortcuts</p>
+            <p>Modifier keys for global shortcuts (e.g. Ctrl+1 if Ctrl is checked)</p>
             <p>
                 <input type="checkbox" class="global-shortcut" id="global-shortcut-ctrl"
                        data-modifier-key="ctrl"/>
