--- a/app/about.html
+++ b/app/about.html
@@ -11,14 +11,13 @@
 <div id="settings-screen" class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
-            <h2>About</h2>
+            <h2>Help</h2>
 
-            <p>Press 1,2,3,4,5,6,7,8 on the keyboard to play sounds.</p>
+            <p>Press 1, 2, 3, 4, 5, 6, 7, 8 on the keyboard to play sounds.</p>
 
             <p>Modifier keys for shortcuts can be changed in the settings.</p>
 
-            <p>© 2017 OOO "Vector"</p>
-
+            <p class="copyright" align="center">© 2017</p>
         </div>
     </div>
 </div>
