--- a/app/about.html
+++ b/app/about.html
@@ -13,7 +13,7 @@
         <div class="col-xs-12">
             <h2>Help</h2>
 
-            <p>Press 1, 2, 3, 4, 5, 6, 7, 8 on the keyboard to play sounds.</p>
+            <p>Press <strong>Ctrl + Shift + 1, 2, 3, 4, 5, 6, 7, 8</strong> on the keyboard to play sounds.</p>
 
             <p>Modifier keys for shortcuts can be changed in the settings.</p>
 
